--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.0",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/tailwind": "^5.1.2",
+    "astro": "^4.16.0",
+    "sal.js": "^0.8.5",
+    "tailwindcss": "^3.4.13",
+    "taos": "^1.0.5",
     "typescript": "^5.6.3"
-  }
+  },
+  "devDependencies": {}
 }
