--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -2,7 +2,7 @@
 #
 # To get started with Astro see: https://docs.astro.build/en/getting-started/
 #
-name: Deploy Astro site through SFTP
+name: Deploy Astro site through FTP
 
 on:
   # Runs on pushes targeting the default branch
