--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^5.1.2",
+    "@cxa/astro-inline-svg": "^0.5.1",
     "astro": "^4.16.0",
     "sal.js": "^0.8.5",
     "tailwindcss": "^3.4.13",
