--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,4 @@
 
 RewriteEngine On
-RewriteCond %{REQUEST_URI} !^/coming-soon.html$
+RewriteCond %{REQUEST_URI} !^/coming-soon$
 RewriteRule ^(.*)$ /coming-soon.html [R=302,L]
