--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,4 @@
-
 RewriteEngine On
 RewriteCond %{REQUEST_URI} !^/coming-soon$
+RewriteCond %{REQUEST_URI} !^/$
 RewriteRule ^(.*)$ /coming-soon [R=302,L]
