--- a/.github/workflows/production-deployment.yml
+++ b/.github/workflows/production-deployment.yml
@@ -7,7 +7,7 @@ name: Deploy Astro site through FTP
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches: ["staging"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -72,4 +72,4 @@ jobs:
           username: axel@bymudras.com
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ${{ env.BUILD_PATH }}/dist/
-          server-dir: /dev.bymudras.com/
+          server-dir: /public_html/
