--- a/.github/workflows/staging-deployment.yml
+++ b/.github/workflows/staging-deployment.yml
@@ -25,7 +25,7 @@ env:
 jobs:
   build:
     environment: Staging
-    name: Build
+    name: Build (Staging)
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
