Update workflow names for production and staging deployments

--- a/.github/workflows/staging-deployment.yml
+++ b/.github/workflows/staging-deployment.yml
@@ -2,7 +2,7 @@
 #
 # To get started with Astro see: https://docs.astro.build/en/getting-started/
 #
-name: Deploy Astro site through FTP
+name: Deploy Astro site through FTP (Staging)
 
 on:
   # Runs on pushes targeting the default branch
